<resources>
    <string name="a" translatable="false">A</string>
    <string name="a_" translatable="false">a*</string>
    <string name="about">About</string>
    <string name="actual_pixels">Actual Pixels</string>
    <string name="add">Add</string>
    <string name="add_symbol" translatable="false">+</string>
    <string name="align">Align</string>
    <string name="all_layers">All Layers</string>
    <string name="alpha" translatable="false">Alpha</string>
    <string name="anti_alias">Anti-alias</string>
    <string name="app_name">Icon Editor</string>
    <string name="app_name_abbrev" translatable="false">I.E.</string>
    <string name="apply_to_each_frame">Apply to Each Frame</string>
    <string name="argb_color_picker">ARGB Color Picker</string>
    <string name="around_r">Around R</string>
    <string name="around_g">Around G</string>
    <string name="around_b">Around B</string>
    <string name="asynchronously_draw_image_and_ui">Asynchronously draw image and U.I.</string>
    <string name="attaching_eraser">Attaching Eraser</string>
    <string name="author">Author</string>
    <string name="automatic">Automatic</string>
    <string name="automatically_tell_has_alpha">Automatically Tell Has Alpha</string>
    <string name="automatically_tell_bitmap_pixels_contain_alpha_values">Automatically tell the bitmap that the pixels contain alpha values</string>
    <string name="b" translatable="false">B</string>
    <string name="b_" translatable="false">b*</string>
    <string name="background">Background</string>
    <string name="background_color">Background Color</string>
    <string name="below_background">Below Background</string>
    <string name="bitmap_opaque_can_take_faster_drawing_case">A bitmap that is opaque can take a faster drawing case</string>
    <string name="blend_mode">Blend Mode</string>
    <string name="blur_radius">Blur</string>
    <string name="bold">Bold</string>
    <string name="bottom">Bottom</string>
    <string name="brush">Brush</string>
    <string name="bucket_fill">Bucket Fill</string>
    <string name="c" translatable="false">C</string>
    <string name="cancel">Cancel</string>
    <string name="cell_grid">Cell Grid</string>
    <string name="center">Center</string>
    <string name="channels">Channels</string>
    <string name="channel_mixer">Channel Mixer</string>
    <string name="check_for_updates">Check for Updates</string>
    <string name="check_for_updates_in_system_browser">Check for updates in system browser</string>
    <string name="cie_l_a_b_" translatable="false">CIE L*a*b*</string>
    <string name="cie_xyz" translatable="false">CIE XYZ</string>
    <string name="cie_xyy" translatable="false">CIE xyY</string>
    <string name="circle">Circle</string>
    <string name="clamp">Clamp</string>
    <string name="clear">Clear</string>
    <string name="clear_destination">Clear Destination</string>
    <string name="clear_guides">Clear Guides</string>
    <string name="clip">Clip</string>
    <string name="clipped">Clipped</string>
    <string name="clone">Clone</string>
    <string name="clone_as_new">Clone as New</string>
    <string name="cloner">Cloner</string>
    <string name="close">Close</string>
    <string name="close_others">Close Others</string>
    <string name="cmyk" translatable="false">CMYK</string>
    <string name="color_balance">Color Balance</string>
    <string name="color_filter">Color Filter</string>
    <string name="color_picker">Color Picker</string>
    <string name="color_range">Color Range</string>
    <string name="color_replace">Color Replace</string>
    <string name="color_representation">Color Representation</string>
    <string name="color_space">Color Space</string>
    <string name="color_type">Color Type</string>
    <string name="colors_">Colors:</string>
    <string name="component_numeral_system">Component\nNumeral System</string>
    <string name="configuration">Configuration</string>
    <string name="contiguous">Contiguous</string>
    <string name="contrast">Contrast</string>
    <string name="conversions">Conversions</string>
    <string name="convert_from_cmyk">Convert from CMYK</string>
    <string name="convert_from_hsv">Convert from HSV</string>
    <string name="convert_from_lab">Convert from CIE L*a*b*</string>
    <string name="convert_from_xyy">Convert from CIE xyY</string>
    <string name="convert_from_xyz">Convert from CIE XYZ</string>
    <string name="convert_from_yuv">Convert from YUV</string>
    <string name="convert_cmyk_to_rgb">Convert CMYK to RGB</string>
    <string name="convert_hsv_to_rgb">Convert HSV to RGB</string>
    <string name="convert_lab_to_rgb">Convert CIE L*a*b* to RGB</string>
    <string name="convert_xyy_to_rgb">Convert CIE xyY to RGB</string>
    <string name="convert_xyz_to_rgb">Convert CIE XYZ to RGB</string>
    <string name="convert_yuv_to_rgb">Convert YUV to RGB</string>
    <string name="coordinates" translatable="false">(%d, %d)</string>
    <string name="copy_noun">Copy</string>
    <string name="copy_verb">Copy</string>
    <string name="crop">Crop</string>
    <string name="current_layer">Current Layer</string>
    <string name="cursor">Cursor</string>
    <string name="curves">Curves</string>
    <string name="custom">Custom</string>
    <string name="custom_color_filter">Custom Color Filter</string>
    <string name="cut">Cut</string>
    <string name="dec">Decimal</string>
    <string name="decal">Decal</string>
    <string name="default_">Default</string>
    <string name="default_bold">Default Bold</string>
    <string name="degree" translatable="false">°</string>
    <string name="degrees_">Degrees: %f°</string>
    <string name="delay">Delay</string>
    <string name="delete">Delete</string>
    <string name="delete_invisible">Delete Invisible</string>
    <string name="deselect">Deselect</string>
    <string name="dither">Dither</string>
    <string name="done">Done</string>
    <string name="draw">Draw</string>
    <string name="draw_color">Draw Color</string>
    <string name="draw_on_not_ui_thread">Draw on Not U.I. Thread</string>
    <string name="drawing_primitive">Drawing Primitive</string>
    <string name="duplicate">Duplicate</string>
    <string name="duplicate_by_color_range">Duplicate by Color Range</string>
    <string name="edit">Edit</string>
    <string name="enabled">Enabled</string>
    <string name="encoding_type">Encoding Type</string>
    <string name="eraser">Eraser</string>
    <string name="exception_merge_as_hidden">Exception: Please select the first tab of two images.</string>
    <string name="export">Export</string>
    <string name="exporting">Exporting</string>
    <string name="eyedropper">Eyedropper</string>
    <string name="failed">Failed</string>
    <string name="fast">Fast</string>
    <string name="file">File</string>
    <string name="file_name">File name</string>
    <string name="fill">Fill</string>
    <string name="fill_with_reference">Fill with Reference</string>
    <string name="filter_layer">Filter Layer</string>
    <string name="filter_noun">Filter</string>
    <string name="filter_verb">Filter</string>
    <string name="filter_displayed_image_after_zooming_out">Filter the displayed image after zooming out</string>
    <string name="filter_image">Filter Image</string>
    <string name="filters">Filters</string>
    <string name="fit_on_screen">Fit on Screen</string>
    <string name="flip">Flip</string>
    <string name="float_">Float</string>
    <string name="foreground_color">Foreground Color</string>
    <string name="forty_eight" translatable="false">48</string>
    <string name="frame">Frame</string>
    <string name="frames">Frames</string>
    <string name="from">From</string>
    <string name="fuzziness">Fuzziness</string>
    <string name="g" translatable="false">G</string>
    <string name="general">General</string>
    <string name="generate_noise">Generate Noise</string>
    <string name="gradient">Gradient</string>
    <string name="gradient_line">Gradient Line</string>
    <string name="group">Group</string>
    <string name="gt" translatable="false"><![CDATA[>]]></string>
    <string name="h" translatable="false">H</string>
    <string name="h_max" translatable="false">H<sub>max</sub></string>
    <string name="h_min" translatable="false">H<sub>min</sub></string>
    <string name="horizontally">Horizontally</string>
    <string name="hsl" translatable="false">HSL</string>
    <string name="hsv" translatable="false">HSV</string>
    <string name="italic">Italic</string>
    <string name="left">Left</string>
    <string name="level">Level</string>
    <string name="level_down">Level down</string>
    <string name="level_up">Level up</string>
    <string name="levels">Levels</string>
    <string name="lightness">Lightness</string>
    <string name="line">Line</string>
    <string name="magic_eraser">Magic Eraser</string>
    <string name="magic_paint">Magic Paint</string>
    <string name="merge">Merge</string>
    <string name="merge_alpha">Merge Alpha</string>
    <string name="merge_as_a_hidden_image">Merge as a Hidden Image</string>
    <string name="merge_down">Merge down</string>
    <string name="merge_visible">Merge Visible</string>
    <string name="mesh">Mesh</string>
    <string name="monospace">Monospace</string>
    <string name="new_">New</string>
    <string name="ninety_degrees" translatable="false">90°</string>
    <string name="none">None</string>
    <string name="ok">OK</string>
    <string name="one_eighty_degrees" translatable="false">180°</string>
    <string name="oval">Oval</string>
    <string name="pencil">Pencil</string>
    <string name="poly">Poly</string>
    <string name="rectangle">Rectangle</string>
    <string name="reference">Reference</string>
    <string name="rename">Rename</string>
    <string name="rgb" translatable="false">RGB</string>
    <string name="right">Right</string>
    <string name="rotate">Rotate</string>
    <string name="ruler">Ruler</string>
    <string name="sans_serif">Sans-serif</string>
    <string name="saturation">Saturation</string>
    <string name="scale">Scale</string>
    <string name="select_by_color_range">Select by Color Range</string>
    <string name="serif">Serif</string>
    <string name="source">Source</string>
    <string name="strike_thru">Strikethrough</string>
    <string name="threshold">Threshold</string>
    <string name="translate">Translate</string>
    <string name="two_seventy_degrees" translatable="false">270°</string>
    <string name="typeface">Typeface</string>
    <string name="underlined">Underlined</string>
    <string name="vertically">Vertically</string>
    <string name="yuv" translatable="false">YUV</string>
    <string name="destination">Destination</string>
    <string name="source_over">Source over</string>
    <string name="destination_over">Destination over</string>
    <string name="source_in">Source in</string>
    <string name="destination_in">Destination in</string>
    <string name="source_out">Source out</string>
    <string name="destination_out">Destination out</string>
    <string name="source_atop">Source atop</string>
    <string name="destination_atop">Destination atop</string>
    <string name="xor">Xor</string>
    <string name="plus">Plus</string>
    <string name="modulate">Modulate</string>
    <string name="screen">Screen</string>
    <string name="overlay">Overlay</string>
    <string name="darken">Darken</string>
    <string name="lighten">Lighten</string>
    <string name="color_dodge">Color Dodge</string>
    <string name="color_burn">Color Burn</string>
    <string name="hard_light">Hard Light</string>
    <string name="soft_light">Soft Light</string>
    <string name="difference">Difference</string>
    <string name="exclusion">Exclusion</string>
    <string name="multiply">Multiply</string>
    <string name="hue">Hue</string>
    <string name="color">Color</string>
    <string name="luminosity">Luminosity</string>
</resources>