<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/layer_edit">
        <item
            android:id="@+id/i_layer_new"
            android:icon="@drawable/ic_add"
            android:iconTint="?attr/colorOnSurfaceVariant"
            android:title="@string/new_" />
        <item
            android:id="@+id/i_layer_duplicate"
            android:icon="@drawable/ic_content_copy"
            android:iconTint="?attr/colorOnSurfaceVariant"
            android:title="@string/duplicate" />
        <item
            android:id="@+id/i_layer_rename"
            android:icon="@drawable/ic_drive_file_rename_outline"
            android:iconTint="?attr/colorOnSurfaceVariant"
            android:title="@string/rename" />
        <item
            android:id="@+id/i_layer_delete"
            android:icon="@drawable/ic_delete"
            android:iconTint="?attr/colorOnSurfaceVariant"
            android:title="@string/delete" />
        <item
            android:id="@+id/i_layer_delete_invisible"
            android:icon="@drawable/ic_void"
            android:title="@string/delete_invisible" />
    </group>
    <group android:id="@+id/g_layer_merge">
        <item
            android:id="@+id/i_layer_merge_down"
            android:icon="@drawable/ic_arrow_downward"
            android:iconTint="?attr/colorOnSurfaceVariant"
            android:title="@string/merge_down" />
        <item
            android:id="@+id/i_layer_merge_visible"
            android:icon="@drawable/ic_void"
            android:title="@string/merge_visible" />
        <item
            android:icon="@drawable/ic_void"
            android:title="@string/merge">
            <menu>
                <item
                    android:id="@+id/i_layer_merge_alpha"
                    android:title="@string/merge_alpha" />
                <item
                    android:id="@+id/i_layer_merge_as_hidden"
                    android:title="@string/merge_as_a_hidden_image" />
            </menu>
        </item>
    </group>
    <group android:id="@+id/layer_properties">
        <item
            android:id="@+id/i_layer_alpha"
            android:icon="@drawable/ic_opacity"
            android:iconTint="?attr/colorOnSurfaceVariant"
            android:title="@string/alpha" />
        <item
            android:id="@+id/i_blend_mode"
            android:icon="@drawable/ic_void"
            android:title="@string/blend_mode">
            <menu>
                <group
                    android:id="@+id/g_blend_mode_0_12"
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/i_layer_blend_mode_clear"
                        android:title="@string/clear" />
                    <item
                        android:id="@+id/i_layer_blend_mode_src"
                        android:title="@string/source" />
                    <item
                        android:id="@+id/i_layer_blend_mode_dst"
                        android:title="@string/destination" />
                    <item
                        android:id="@+id/i_layer_blend_mode_src_over"
                        android:title="@string/source_over" />
                    <item
                        android:id="@+id/i_layer_blend_mode_dst_over"
                        android:title="@string/destination_over" />
                    <item
                        android:id="@+id/i_layer_blend_mode_src_in"
                        android:title="@string/source_in" />
                    <item
                        android:id="@+id/i_layer_blend_mode_dst_in"
                        android:title="@string/destination_in" />
                    <item
                        android:id="@+id/i_layer_blend_mode_src_out"
                        android:title="@string/source_out" />
                    <item
                        android:id="@+id/i_layer_blend_mode_dst_out"
                        android:title="@string/destination_out" />
                    <item
                        android:id="@+id/i_layer_blend_mode_src_atop"
                        android:title="@string/source_atop" />
                    <item
                        android:id="@+id/i_layer_blend_mode_dst_atop"
                        android:title="@string/destination_atop" />
                    <item
                        android:id="@+id/i_layer_blend_mode_xor"
                        android:title="@string/xor" />
                    <item
                        android:id="@+id/i_layer_blend_mode_plus"
                        android:title="@string/plus" />
                </group>
                <group
                    android:id="@+id/g_blend_mode_13_15"
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/i_layer_blend_mode_modulate"
                        android:title="@string/modulate" />
                    <item
                        android:id="@+id/i_layer_blend_mode_screen"
                        android:title="@string/screen" />
                    <item
                        android:id="@+id/i_layer_blend_mode_overlay"
                        android:title="@string/overlay" />
                </group>
                <group
                    android:id="@+id/g_blend_mode_16_17"
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/i_layer_blend_mode_darken"
                        android:title="@string/darken" />
                    <item
                        android:id="@+id/i_layer_blend_mode_lighten"
                        android:title="@string/lighten" />
                </group>
                <group
                    android:id="@+id/g_blend_mode_18_19"
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/i_layer_blend_mode_color_dodge"
                        android:title="@string/color_dodge" />
                    <item
                        android:id="@+id/i_layer_blend_mode_color_burn"
                        android:title="@string/color_burn" />
                </group>
                <group
                    android:id="@+id/g_blend_mode_20_21"
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/i_layer_blend_mode_hard_light"
                        android:title="@string/hard_light" />
                    <item
                        android:id="@+id/i_layer_blend_mode_soft_light"
                        android:title="@string/soft_light" />
                </group>
                <group
                    android:id="@+id/g_blend_mode_22_24"
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/i_layer_blend_mode_difference"
                        android:title="@string/difference" />
                    <item
                        android:id="@+id/i_layer_blend_mode_exclusion"
                        android:title="@string/exclusion" />
                    <item
                        android:id="@+id/i_layer_blend_mode_multiply"
                        android:title="@string/multiply" />
                </group>
                <group
                    android:id="@+id/g_blend_mode_25_28"
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/i_layer_blend_mode_hue"
                        android:title="@string/hue" />
                    <item
                        android:id="@+id/i_layer_blend_mode_saturation"
                        android:title="@string/saturation" />
                    <item
                        android:id="@+id/i_layer_blend_mode_color"
                        android:title="@string/color" />
                    <item
                        android:id="@+id/i_layer_blend_mode_luminosity"
                        android:title="@string/luminosity" />
                </group>
            </menu>
        </item>
        <item
            android:id="@+id/i_layer_clipping"
            android:checkable="true"
            android:icon="@drawable/ic_content_cut"
            android:iconTint="?attr/colorOnSurfaceVariant"
            android:title="@string/clip_to_layers_below" />
        <item
            android:icon="@drawable/ic_filter"
            android:iconTint="?attr/colorOnSurfaceVariant"
            android:title="@string/filters">
            <menu>
                <group
                    android:id="@+id/g_layer_filter_none"
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/i_layer_filter_none"
                        android:icon="@drawable/ic_void"
                        android:iconTint="?attr/colorOnSurfaceVariant"
                        android:title="@string/none" />
                </group>
                <group
                    android:id="@+id/g_layer_filters_lighting"
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/i_layer_filter_lightness"
                        android:icon="@drawable/ic_brightness_5"
                        android:iconTint="?attr/colorOnSurfaceVariant"
                        android:title="@string/lightness" />
                    <item
                        android:id="@+id/i_layer_filter_contrast"
                        android:icon="@drawable/ic_contrast"
                        android:iconTint="?attr/colorOnSurfaceVariant"
                        android:title="@string/contrast" />
                    <item
                        android:id="@+id/i_layer_filter_levels"
                        android:icon="@drawable/ic_void"
                        android:iconTint="?attr/colorOnSurfaceVariant"
                        android:title="@string/levels" />
                    <item
                        android:id="@+id/i_layer_filter_curves"
                        android:icon="@drawable/ic_void"
                        android:iconTint="?attr/colorOnSurfaceVariant"
                        android:title="@string/curves" />
                </group>
                <group
                    android:id="@+id/g_layer_filters_advanced"
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/i_layer_filter_saturation"
                        android:icon="@drawable/ic_void"
                        android:iconTint="?attr/colorOnSurfaceVariant"
                        android:title="@string/saturation" />
                    <item
                        android:id="@+id/i_layer_filter_hsv"
                        android:icon="@drawable/ic_void"
                        android:iconTint="?attr/colorOnSurfaceVariant"
                        android:title="@string/hsv" />
                    <item
                        android:id="@+id/i_layer_filter_color_balance"
                        android:icon="@drawable/ic_balance"
                        android:iconTint="?attr/colorOnSurfaceVariant"
                        android:title="@string/color_balance" />
                    <item
                        android:id="@+id/i_layer_filter_lighting"
                        android:icon="@drawable/ic_void"
                        android:iconTint="?attr/colorOnSurfaceVariant"
                        android:title="@string/channel_lighting" />
                    <item
                        android:id="@+id/i_layer_filter_color_matrix"
                        android:icon="@drawable/ic_void"
                        android:iconTint="?attr/colorOnSurfaceVariant"
                        android:title="@string/channel_mixer" />
                </group>
                <group
                    android:id="@+id/g_layer_filters_more"
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/i_layer_filter_threshold"
                        android:icon="@drawable/ic_filter_b_and_w"
                        android:iconTint="?attr/colorOnSurfaceVariant"
                        android:title="@string/threshold" />
                </group>
            </menu>
        </item>
        <item
            android:id="@+id/i_layer_select_by_color_range"
            android:icon="@drawable/ic_void"
            android:title="@string/select_by_color_range" />
        <item
            android:icon="@drawable/ic_void"
            android:title="@string/level">
            <menu>
                <group android:id="@+id/g_layer_level">
                    <item
                        android:id="@+id/i_layer_level_up"
                        android:icon="@drawable/ic_arrow_upward"
                        android:iconTint="?attr/colorOnSurfaceVariant"
                        android:title="@string/level_up" />
                    <item
                        android:id="@+id/i_layer_level_down"
                        android:icon="@drawable/ic_arrow_downward"
                        android:iconTint="?attr/colorOnSurfaceVariant"
                        android:title="@string/level_down" />
                </group>
                <group android:id="@+id/g_layer_shortcuts">
                    <item
                        android:id="@+id/i_layer_add_layer_mask"
                        android:icon="@drawable/ic_void"
                        android:title="@string/fast_add_layer_mask" />
                    <item
                        android:id="@+id/i_layer_create_clipping_mask"
                        android:icon="@drawable/ic_void"
                        android:title="@string/fast_create_clipping_mask" />
                    <item
                        android:id="@+id/i_layer_add_filter_layer"
                        android:icon="@drawable/ic_void"
                        android:title="@string/fast_add_filter_layer" />
                    <item
                        android:id="@+id/i_layer_create_group"
                        android:icon="@drawable/ic_create_new_folder"
                        android:iconTint="?attr/colorOnSurfaceVariant"
                        android:title="@string/fast_create_group" />
                </group>
            </menu>
        </item>
        <item
            android:id="@+id/i_layer_reference"
            android:checkable="true"
            android:icon="@drawable/ic_void"
            android:title="@string/reference" />
    </group>
</menu>